@@ -1,3 +1,7 @@
+May 16, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
+
+ * libpcsxcore/plugins.c: Added brackets around CheckErr() and LoadSym().
+
 May 15, 2010 edgbla <edgbla@yandex.ru>
 
  * libpcsxcore/psxdma.h: spu dma was fixed.
